WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242040
Vorbis decoding no longer works following
bug 241339
https://bugs.webkit.org/show_bug.cgi?id=242040
Summary
Vorbis decoding no longer works following bug 241339
Jean-Yves Avenard [:jya]
Reported
2022-06-27 17:09:20 PDT
In
https://bugs.webkit.org/show_bug.cgi?id=241339
things were changed to use AudioComponentFetchServerRegistrations with the GPU Process. This will be okay for all codecs but vorbis as it requires both an entitlement and must be manually loaded. So following this change, playback of vorbis file is broken
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-06-27 17:09:41 PDT
<
rdar://problem/96023176
>
Jean-Yves Avenard [:jya]
Comment 2
2022-07-01 01:17:28 PDT
Pull Request:
https://github.com/WebKit/WebKit/pull/1983
EWS
Comment 3
2022-07-07 06:41:44 PDT
Committed
252211@main
(092367a88f87): <
https://commits.webkit.org/252211@main
> Reviewed commits have been landed. Closing PR #1983 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug