Vorbis decoding no longer works following bug 241339 https://bugs.webkit.org/show_bug.cgi?id=242040 <rdar://96023176>

Reviewed by Per Arne Vollan.

To be able to register the vorbis decoder we need an entitlement now that
we've switched to using AudioComponentFetchServerRegistrations.

Covered by existing tests, however those are disable as the code is non-functional
with non-signed binaries.

* Source/WebKit/GPUProcess/mac/GPUProcessMac.mm:
(WebKit::GPUProcess::initializeSandbox):
* Source/WebKit/Scripts/process-entitlements.sh:

Canonical link: https://commits.webkit.org/252211@main